Refactoriser package en minuscule (retrait de l'ancien système de package), ajout d'un 3ème client test dans le seeder